// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matrix widget should snapshot on mobile: first mobile render 1`] = `
<div>
  <span
    class="mock-KatexProvider"
  >
    <div
      class="perseus-renderer perseus-renderer-responsive"
    >
      <div
        class="paragraph"
        data-perseus-paragraph-index="0"
      >
        <div
          class="paragraph"
        >
          <strong>
            Perform the row operation, 
            <span
              style="white-space: nowrap;"
            >
              <span />
              <span
                class="mock-TeX"
              >
                R_3 \\leftrightarrow R_2
              </span>
              <span />
            </span>
            , on the following matrix.
          </strong>
        </div>
      </div>
      <div
        class="paragraph perseus-paragraph-centered"
        data-perseus-paragraph-index="1"
      >
        <div
          class="perseus-block-math"
          style="margin-left: -16px; margin-right: -16px;"
        >
          <div
            class="perseus-block-math-inner"
            style="overflow-x: auto; overflow-y: hidden; margin-top: -10px; margin-bottom: -10px; transform: translate3d(0,0,0); padding: 10px 16px 10px 16px;"
          >
            <span
              style="display: block; width: 100%; transform: scale(1, 1)  translate(0, 8px); transform-origin: 0 0; opacity: 0;"
            >
              <span
                class="mock-TeX"
              >
                \\left[\\begin{array} {ccc}
5 & -2 & 1 & 1 \\\\
3 & 0 & 0 & -2 \\\\
1 & 1 & 7 & -3 \\end{array} \\right] 
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="2"
      >
        <div
          class="paragraph"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="m8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-3c0.55 0 1-0.45 1-1s-0.45-1-1-1-1 0.45-1 1 0.45 1 1 1zm0-9c-0.55 0-1 0.45-1 1v4c0 0.55.45 1 1 1s1-0.45 1-1v-4c0-0.55-0.45-1-1-1z"
              fill="#d92916"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`matrix widget should snapshot: first render 1`] = `
<div>
  <span
    class="mock-KatexProvider"
  >
    <div
      class="perseus-renderer perseus-renderer-responsive"
    >
      <div
        class="paragraph"
        data-perseus-paragraph-index="0"
      >
        <div
          class="paragraph"
        >
          <strong>
            Perform the row operation, 
            <span
              style="white-space: nowrap;"
            >
              <span />
              <span
                class="mock-TeX"
              >
                R_3 \\leftrightarrow R_2
              </span>
              <span />
            </span>
            , on the following matrix.
          </strong>
        </div>
      </div>
      <div
        class="paragraph perseus-paragraph-centered"
        data-perseus-paragraph-index="1"
      >
        <div
          class="perseus-block-math"
        >
          <div
            class="perseus-block-math-inner"
            style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
          >
            <span
              class="mock-TeX"
            >
              \\left[\\begin{array} {ccc}
5 & -2 & 1 & 1 \\\\
3 & 0 & 0 & -2 \\\\
1 & 1 & 7 & -3 \\end{array} \\right] 
            </span>
          </div>
        </div>
      </div>
      <div
        class="paragraph"
        data-perseus-paragraph-index="2"
      >
        <div
          class="paragraph"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="m8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-3c0.55 0 1-0.45 1-1s-0.45-1-1-1-1 0.45-1 1 0.45 1 1 1zm0-9c-0.55 0-1 0.45-1 1v4c0 0.55.45 1 1 1s1-0.45 1-1v-4c0-0.55-0.45-1-1-1z"
              fill="#d92916"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>
</div>
`;
